<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>NavBar</class>
 <widget class="QWidget" name="NavBar">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>130</width>
    <height>42</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="control::NavPushButton" name="notificationButton">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>3</y>
     <width>38</width>
     <height>38</height>
    </rect>
   </property>
   <property name="toolTip">
    <string>History of wallet events</string>
   </property>
   <property name="text">
    <string>...</string>
   </property>
   <property name="icon">
    <iconset resource="../resources.qrc">
     <normaloff>:/img/NavNotificationNormal@2x.svg</normaloff>:/img/NavNotificationNormal@2x.svg</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>80</width>
     <height>80</height>
    </size>
   </property>
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>false</bool>
   </property>
   <property name="autoRaise">
    <bool>false</bool>
   </property>
  </widget>
  <widget class="control::NavPushButton" name="settingsButton">
   <property name="geometry">
    <rect>
     <x>45</x>
     <y>3</y>
     <width>38</width>
     <height>38</height>
    </rect>
   </property>
   <property name="toolTip">
    <string>Wallet settings</string>
   </property>
   <property name="text">
    <string>...</string>
   </property>
   <property name="icon">
    <iconset resource="../resources.qrc">
     <normaloff>:/img/NavSettings@2x.svg</normaloff>:/img/NavSettings@2x.svg</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>80</width>
     <height>80</height>
    </size>
   </property>
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>false</bool>
   </property>
   <property name="autoRaise">
    <bool>false</bool>
   </property>
  </widget>
  <widget class="control::NavPushButton" name="accountButton">
   <property name="geometry">
    <rect>
     <x>90</x>
     <y>3</y>
     <width>38</width>
     <height>38</height>
    </rect>
   </property>
   <property name="toolTip">
    <string>Account options</string>
   </property>
   <property name="text">
    <string>...</string>
   </property>
   <property name="icon">
    <iconset resource="../resources.qrc">
     <normaloff>:/img/NavAccount@2x.svg</normaloff>:/img/NavAccount@2x.svg</iconset>
   </property>
   <property name="iconSize">
    <size>
     <width>80</width>
     <height>80</height>
    </size>
   </property>
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>false</bool>
   </property>
   <property name="autoRaise">
    <bool>false</bool>
   </property>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>control::NavPushButton</class>
   <extends>QToolButton</extends>
   <header>control/NavControls.h</header>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../resources.qrc"/>
 </resources>
 <connections/>
</ui>
